--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,18 @@
               <a class="dropdown-item" href="{% url 'seconda_app:for' %}">for</a>
             </div>
           </li>
-
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              News
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/news">homepage</a>
+              <a class="dropdown-item" href="/news/lista_articoli">articoli</a>
+              <a class="dropdown-item" href="/news/lista_giornalisti">giornalisti</a>
+  
+            </div>
+          </li>
           
 
         </ul>
