--- a/libreria/templates/lista_libri.html
+++ b/libreria/templates/lista_libri.html
@@ -10,4 +10,4 @@
         <h4><strong>ISBN : </strong>{{libro.isbn}}</h4>
         <hr>
     {% endfor %}
-{% endblock contente %}
+{% endblock content %}
