--- a/libreria/templates/autore.html
+++ b/libreria/templates/autore.html
@@ -9,4 +9,4 @@
         <h4><strong>ISBN : </strong>{{libro.isbn}}</h4>
         <hr>
     {% endfor %}
-{% endblock contente %}
+{% endblock content %}
