--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>{% block head_title %}Libreria{% endblock head_title %}</title>
+    <title>{% block head_title %}Libreria Agostoni{% endblock head_title %}</title>
   </head>
   <body>
     <div class="container">
-        {% block contente %}
+        {% block content %}
 
-        {% endblock contente %}
+        {% endblock content %}
 
     <!-- Optional JavaScript; choose one of the two! -->
 
