--- a/news/templates/homepageNews.html
+++ b/news/templates/homepageNews.html
@@ -14,7 +14,7 @@
 
   <h4>Giornalisti:</h4>
   {% for giornalista in giornalisti %}
-    <p><strong>Nopme: </strong>{{ giornalista.nome }}</p>
+    <p><strong>Nome: </strong>{{ giornalista.nome }}</p>
     <p><strong>Cognome: </strong>{{ giornalista.cognome }}</p>
     <br>
   {% endfor %}
