--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -15,7 +15,7 @@
         {% block content %}
 
         {% endblock content %}
-
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
