--- a/libreria/templates/libreria_homepage.html
+++ b/libreria/templates/libreria_homepage.html
@@ -1,20 +1,20 @@
 {% extends 'base.html'%}
 {%block title%}
-Articoli e giornalisti
+Libreria
 {%endblock title%}
 
 {%block content%}
 <div class="row">
   <div class="col">
-    <h3>Articoli</h3>
-    {% include 'includes/articoli_list.html' %}
+    <h3>Libri</h3>
+    {% include 'includes/libri_list.html' %}
   </div>
 </div>
 
 <div class="row">
   <div class="col">
-    <h3>Giornalisti</h3>
-    {% include 'includes/giornalisti_list.html' %}
+    <h3>Autori</h3>
+    {% include 'includes/autori_list.html' %}
   </div>
 </div>
 {%endblock content%}
