--- a/libreria/templates/lista_autori.html
+++ b/libreria/templates/lista_autori.html
@@ -1,9 +1,9 @@
 {% extends 'base.html'%}
 {%block title%}
-	Libri
+	Autori
 {%endblock title%}
 
 {%block content%}
-  <h3>Libri</h3>
-  {% include 'includes/libri_list.html' %}
+  <h3>Autori</h3>
+  {% include 'includes/autori_list.html' %}
 {%endblock content%}
