--- a/news/templates/lista_articoli.html
+++ b/news/templates/lista_articoli.html
@@ -1,14 +1,9 @@
 {% extends 'base.html'%}
 {%block title%}
-   Lista Articoli
+	Articoli
 {%endblock title%}
 
 {%block content%}
-  <h4>Articoli:</h4>
-  {% for articolo in articoli %}
-    <p><strong>Titolo: </strong><a href="/news/articoli/{{ articolo.id }}">{{ articolo.titolo }}</a></p>
-    <p><strong>Contenuto: </strong>{{ articolo.contenuto }}</p>
-    <p><strong>Autore: </strong>{{ articolo.giornalista}}</p>
-    <br>
-  {% endfor %}
+  <h3>Articoli</h3>
+  {% include 'includes/articoli_list.html' %}
 {%endblock content%}
